--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bleach==2.1.3
 certifi==2018.4.16
 chardet==3.0.4
 decorator==4.3.0
+Django==2.0.6
 entrypoints==0.2.3
 html5lib==1.0.1
 idna==2.6
@@ -32,6 +33,7 @@ prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
 python-dateutil==2.7.3
+pytz==2018.4
 pyzmq==17.0.0
 qtconsole==4.3.1
 requests==2.18.4
